@@ -4,6 +4,7 @@
  */
 package net.matrix.java.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -14,23 +15,23 @@ class ListMxTest {
     @Test
     void testGetFirst() {
         assertThat(ListMx.getFirst((List) null)).isNull();
-        assertThat(ListMx.getFirst(List.of("a"))).isEqualTo("a");
-        assertThat(ListMx.getFirst(List.of("a", "b"))).isEqualTo("a");
+        assertThat(ListMx.getFirst(Arrays.asList("a"))).isEqualTo("a");
+        assertThat(ListMx.getFirst(Arrays.asList("a", "b"))).isEqualTo("a");
     }
 
     @Test
     void testGetLast() {
         assertThat(ListMx.getLast((List) null)).isNull();
-        assertThat(ListMx.getLast(List.of("a"))).isEqualTo("a");
-        assertThat(ListMx.getLast(List.of("a", "b"))).isEqualTo("b");
+        assertThat(ListMx.getLast(Arrays.asList("a"))).isEqualTo("a");
+        assertThat(ListMx.getLast(Arrays.asList("a", "b"))).isEqualTo("b");
     }
 
     @Test
     void testGet() {
         assertThat(ListMx.get((List) null, 0)).isNull();
-        assertThat(ListMx.get(List.of("a"), 0)).isEqualTo("a");
-        assertThat(ListMx.get(List.of("a"), -1)).isNull();
-        assertThat(ListMx.get(List.of("a"), 1)).isNull();
-        assertThat(ListMx.get(List.of("a", "b", "c"), 1)).isEqualTo("b");
+        assertThat(ListMx.get(Arrays.asList("a"), 0)).isEqualTo("a");
+        assertThat(ListMx.get(Arrays.asList("a"), -1)).isNull();
+        assertThat(ListMx.get(Arrays.asList("a"), 1)).isNull();
+        assertThat(ListMx.get(Arrays.asList("a", "b", "c"), 1)).isEqualTo("b");
     }
 }
